--- a/talky-app/src/App.css
+++ b/talky-app/src/App.css
@@ -1,38 +1,18 @@
-.App {
-  text-align: center;
+body {
+  background: #36393f;
+  height: 100vh;
+  width: 100vw;
+}
+* {
+  border: 1px solid red;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+:root {
+  --font-primary: "Whitney", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  --font-display: "Ginto Normal", "Whitney", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  --font-headline: "Ginto Nord", "Whitney", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  --font-monospace: "Menlo", "Consolas", "Monaco", monospace;
+  --font-glitch: "ArchivoBlack", "Whitney", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  --font-cursive: "Reenie Beanie", "Comic Sans MS", cursive, sans-serif;
+  --background-color: #36393f;
 }
