--- a/talky-app/src/components/ui/NavBarRight/css/NavBarRight.css
+++ b/talky-app/src/components/ui/NavBarRight/css/NavBarRight.css
@@ -1,5 +1,5 @@
 .navbar-right {
-  border: 5px solid yellow;
+  /* border: 5px solid yellow; */
   padding: 0px 100px;
   position: fixed;
   right: 0px;
@@ -7,16 +7,35 @@
   align-items: center;
   justify-content: center;
   background: var(--background-color);
-  box-shadow: -10px 0px 5px 0px var(--background-color);
+  box-shadow: -10px 0px 5px 0px #2f3136;
+  border-bottom: 5px solid #2f3136;
+  height: 80px;
+  width: 360px;
 }
 
 .navbar-right-container {
-  border: 10px solid white;
+  /* border: 10px solid white; */
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 2em;
 }
 
 .navbar-right-box {
   display: inline-block;
-  margin: 0px 10px;
+  margin: 0px 20px;
+}
+
+.navbar-right-question-container {
+  border: 1px solid white;
+  /* z-index: 100000; */
+  border-radius: 50px;
+  width: 52px;
+  height: 52px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
