--- a/talky-app/src/components/ui/PageLogo/css/PageLogo.css
+++ b/talky-app/src/components/ui/PageLogo/css/PageLogo.css
@@ -1,13 +1,14 @@
 .page-logo-container {
   display: flex;
-  /* padding: 0px 0px 0px 100px; */
+  padding: 0px 50px 0px 0px;
   width: 100%;
   justify-content: center;
   align-items: center;
+  border-right: 1px solid #41464d;
 }
 
 .page-logo-fa-person {
-  border: 1px solid white;
+  /* border: 1px solid white; */
   height: 50px;
   width: 50px;
   position: inherit;
