--- a/talky-app/src/components/ui/Profile/css/Profile.css
+++ b/talky-app/src/components/ui/Profile/css/Profile.css
@@ -3,16 +3,38 @@
   bottom: 0;
   width: 100%;
   border: 1px solid yellow;
-  padding: 40px;
+  padding: 12px;
   display: flex;
   /* justify-content: center; */
   align-items: center;
+  background: #202225;
 }
 
 .profile-avatar {
-  height: 100%;
-  border: 1px solid white;
-  border-radius: 50px;
+  width: 50px;
+  /* height: 50px; */
+}
+
+.profile-avatar-background {
+  border-radius: 10px;
+  width: fit-content;
+  /* background: rgb(63, 67, 75, 1); */
+  height: 62px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 11px;
+}
+
+.profile-avatar-background:hover {
+  border-radius: 10px;
+  width: fit-content;
+  background: rgb(63, 67, 75, 1);
+  height: 62px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 11px;
 }
 
 .profile-settings {
@@ -21,4 +43,29 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.profile-avatar-name {
+  color: #fff;
+  font-size: 25px;
+  margin: 0px 10px;
+}
+
+.profile-avatar-gear {
+  color: white;
+  font-size: 25px;
+  padding: 7px;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  margin: 5px;
+}
+
+.profile-avatar-gear:hover {
+  /* margin: 0px 0px 100px 150px; */
+  color: white;
+  font-size: 25px;
+  padding: 7px;
+  background: rgb(63, 67, 75, 1);
+  border-radius: 10px;
 }
