--- a/talky-app/src/components/ui/SideBarOptions/css/SideBarOptions.css
+++ b/talky-app/src/components/ui/SideBarOptions/css/SideBarOptions.css
@@ -5,3 +5,47 @@
   margin: 0;
   border: 2px solid white;
 }
+
+.sidebar-option {
+  color: #b0b0b0;
+  display: flex;
+  align-items: center;
+  width: 95%;
+  height: 50px;
+  padding: 0px 0px 0px 15px;
+  margin: 10px 0px;
+  opacity: 0.9;
+}
+
+.sidebar-option:hover {
+  color: white;
+  display: flex;
+  align-items: center;
+  width: 95%;
+  border-radius: 10px;
+  background: #3b3e45;
+  margin: 10px 0px;
+}
+
+.sidebar-tag {
+  font-size: 25px;
+}
+
+.sidebar-option-logo-container {
+  margin: 0px 20px 0px 0px;
+}
+.sidebar-logo {
+  /* margin: 0px 15px 10px 0px; */
+  font-size: 20px;
+  width: 50px;
+  height: 50px;
+  /* border: 1px solid white; */
+  font-weight: 900;
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+}
+
+.fa-person {
+  border-bottom: 0px !important;
+}
